Enhance app styling with Open Sans font and update layout components for consistency

--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
                 border-collapse: collapse;
             }
             .pvtTable td, .pvtTable th {
+                font-family: Arial, sans-serif;
                 padding: 8px;
                 border: 1px solid #ddd;
             }
             .pvtTotal, .pvtGrandTotal {
+                font-family: Arial, sans-serif;
                 font-weight: bold;
                 background-color: #f5f5f5;
             }
             .pvtAxisContainer, .pvtVals {
+                font-family: Arial, sans-serif;
                 background-color: #f8f9fa;
                 padding: 5px;
             }
