Successfully customized pivot table format

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!-- <html>
     <head>
         {%metas%}
         <title>{%title%}</title>
         {%favicon%}
         {%css%}
-        <!-- Add pivot table styles -->
+         Add pivot table styles
         <style>
             .pvtTable {
                 font-family: Arial, sans-serif;
@@ -28,7 +27,7 @@
                 padding: 5px;
             }
         </style>
-        <!-- Add client-side processing script -->
+         Add client-side processing script 
         <script src="/assets/clientProcessing.js"></script>
     </head>
     <body>
@@ -39,4 +38,4 @@
             {%renderer%}
         </footer>
     </body>
-</html>
+</html> -->
