--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!-- <html>
     <head>
+        <script type="text/javascript">
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "r5p3eqn5xb");
+        </script>
         {%metas%}
         <title>{%title%}</title>
         {%favicon%}
